# bevy_mod_localization

./: Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml  dependencies.yml
assets/strings/interactive/: de.ftl  en-US.ftl  en_us.ftl  fr.ftl
assets/strings/locale_fallback/: de.ftl  en-GB.ftl  en-US.ftl
bevy_mod_localization_derive/: Cargo.toml
bevy_mod_localization_derive/src/: lib.rs
bevy_prototype_fluent_derive/: Cargo.toml
bevy_prototype_fluent_derive/src/: lib.rs
examples/: basic.rs  interactive.rs  locale_fallback.rs  test.rs
src/: fluent.rs  lib.rs  locale.rs  localization.rs  plugin.rs  prelude.rs
src/asset/: loader.rs  mod.rs  plugin.rs  reader.rs
src/core/: default_fallback.rs  fallback_map.rs  language_id.rs  locale.rs  locale_chain.rs  mod.rs  plugin.rs
src/loaders/: ftl_loader.rs  mod.rs
src/locale/: default_fallback.rs  fallback_map.rs  into_language_identifier.rs  mod.rs
src/localization/: add_localization.rs  asset.rs  components.rs  folder.rs  localization_args.rs  mod.rs  resolution_chain.rs  systems.rs  text.rs  traits.rs  utils.rs
