[package]
name = "bevy_mod_localization"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_mod_localization_derive = { path = "bevy_mod_localization_derive", version = "0.1.0" }
anyhow = "1.0.70"
fluent = "0.16.0"
intl-memoizer = "0.5.1"
unic-langid = { version = "0.9.1", features = ["macros"] }

[dependencies.bevy]
version = "0.10"
default-features = false
features = ["bevy_asset", "bevy_text"]

[dev-dependencies.bevy]
version = "0.10"
default-features = false
features = [
  "bevy_asset",
  "bevy_sprite",
  "bevy_text",
  "bevy_render",
  "bevy_core_pipeline",
  "x11",
  "filesystem_watcher",
  "bevy_ui",
]

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "interactive"
path = "examples/interactive.rs"

[[example]]
name = "locale_fallback"
path = "examples/locale_fallback.rs"
