[package]
name = "bevy_mod_localization"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
fluent = "0.16.0"
intl-memoizer = "0.5.1"
unic-langid = { version = "0.9.1", features = ["macros"] }

[dependencies.bevy]
version = "0.12"
default-features = false
features = ["bevy_asset", "bevy_text"]
